--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,95 +1,13 @@
 {
+  "files.defaultLanguage": "cpp",
   "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
   "cmake.configureSettings": {
     "CMAKE_TOOLCHAIN_FILE": "${env:VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake"
   },
-  "files.associations": {
-    "algorithm": "cpp",
-    "array": "cpp",
-    "atomic": "cpp",
-    "bit": "cpp",
-    "bitset": "cpp",
-    "cctype": "cpp",
-    "cfenv": "cpp",
-    "charconv": "cpp",
-    "chrono": "cpp",
-    "clocale": "cpp",
-    "cmath": "cpp",
-    "compare": "cpp",
-    "complex": "cpp",
-    "concepts": "cpp",
-    "csignal": "cpp",
-    "cstdarg": "cpp",
-    "cstddef": "cpp",
-    "cstdint": "cpp",
-    "cstdio": "cpp",
-    "cstdlib": "cpp",
-    "cstring": "cpp",
-    "ctime": "cpp",
-    "cwchar": "cpp",
-    "cwctype": "cpp",
-    "deque": "cpp",
-    "exception": "cpp",
-    "filesystem": "cpp",
-    "format": "cpp",
-    "forward_list": "cpp",
-    "fstream": "cpp",
-    "functional": "cpp",
-    "initializer_list": "cpp",
-    "iomanip": "cpp",
-    "ios": "cpp",
-    "iosfwd": "cpp",
-    "iostream": "cpp",
-    "istream": "cpp",
-    "iterator": "cpp",
-    "limits": "cpp",
-    "list": "cpp",
-    "locale": "cpp",
-    "map": "cpp",
-    "memory": "cpp",
-    "mutex": "cpp",
-    "new": "cpp",
-    "numeric": "cpp",
-    "optional": "cpp",
-    "ostream": "cpp",
-    "queue": "cpp",
-    "ranges": "cpp",
-    "ratio": "cpp",
-    "set": "cpp",
-    "source_location": "cpp",
-    "span": "cpp",
-    "sstream": "cpp",
-    "stack": "cpp",
-    "stdexcept": "cpp",
-    "stop_token": "cpp",
-    "streambuf": "cpp",
-    "string": "cpp",
-    "strstream": "cpp",
-    "system_error": "cpp",
-    "thread": "cpp",
-    "tuple": "cpp",
-    "type_traits": "cpp",
-    "typeindex": "cpp",
-    "typeinfo": "cpp",
-    "unordered_map": "cpp",
-    "utility": "cpp",
-    "variant": "cpp",
-    "vector": "cpp",
-    "xfacet": "cpp",
-    "xhash": "cpp",
-    "xiosbase": "cpp",
-    "xlocale": "cpp",
-    "xlocbuf": "cpp",
-    "xlocinfo": "cpp",
-    "xlocmes": "cpp",
-    "xlocmon": "cpp",
-    "xlocnum": "cpp",
-    "xloctime": "cpp",
-    "xmemory": "cpp",
-    "xstddef": "cpp",
-    "xstring": "cpp",
-    "xtr1common": "cpp",
-    "xtree": "cpp",
-    "xutility": "cpp"
-  }
+  "cmake.debugConfig": {
+    "cwd": "${workspaceFolder}/data"
+  },
+  "C_Cpp.default.includePath": [
+    "${workspaceFolder}/include"
+  ]
 }
