update: fix build error for request_parser

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,9 @@
   },
   "C_Cpp.default.includePath": [
     "${workspaceFolder}/include"
-  ]
+  ],
+  "files.associations": {
+    "*.ipp": "cpp",
+    "xstring": "cpp"
+  }
 }
