--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
   "cmake.debugConfig": {
     "cwd": "${workspaceFolder}/data"
   },
+  "cmake.buildDirectory": "${workspaceFolder}/build",
   "C_Cpp.default.includePath": [
     "${workspaceFolder}/include"
   ],
